--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "material-ui": "^0.20.1",
     "node-sass": "^4.9.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -36,6 +37,7 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-material-icons": "^1.0.3",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
